--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,3 +31,12 @@ main {
     width: 311px;
     height: 627px;
 }
+
+#tela {
+    position: relative;
+    top: 81px;
+    left: 23px;
+
+    width: 266px;
+    height: 465px;
+}
